--- a/dotnetcore_razor/dotnetcore_razor.csproj
+++ b/dotnetcore_razor/dotnetcore_razor.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RestaurantDataService.Data\RestaurantDataService.Data.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
